--- a/app/src/main/res/layout/item_list2.xml
+++ b/app/src/main/res/layout/item_list2.xml
@@ -15,35 +15,55 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_weight="1"
+        android:layout_weight="3"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/person_name"
+            android:id="@+id/price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:textSize="14sp"
-            tools:text="fake" />
+            tools:text="price" />
 
         <TextView
-            android:id="@+id/last_name"
+            android:id="@+id/productName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:textSize="14sp"
-            tools:text="fake" />
+            tools:text="Product name" />
+
+        <TextView
+            android:id="@+id/id_product"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:textSize="14sp"
+            tools:text="id" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/btnDel"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@android:drawable/ic_menu_close_clear_cancel" />
+        android:layout_marginStart="5dp"
+        android:orientation="vertical">
 
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/btndel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@android:drawable/ic_menu_close_clear_cancel" />
+    </LinearLayout>
 </LinearLayout>
