--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,4 +8,15 @@
         android:id="@+id/my_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <TextView
+        android:id="@+id/add_item"
+        android:layout_width="wrap_content"
+        android:text="Добавить контакт"
+        android:background="@android:color/holo_blue_light"
+        android:padding="10dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:textColor="@android:color/black"
+        android:layout_height="wrap_content" />
 </FrameLayout>
