--- a/app/src/main/res/layout/item_list2.xml
+++ b/app/src/main/res/layout/item_list2.xml
@@ -58,7 +58,7 @@
             android:layout_gravity="center"/>
 
         <TextView
-            android:id="@+id/btndel"
+            android:id="@+id/delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
